add generation test

--- a/notebooks/generation_methods.ipynb
+++ b/notebooks/generation_methods.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -101,13 +101,14 @@
        "             12, 29891,    13, 50256]]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "source = samples[0][\"en\"]\n",
+    "target = samples[0][\"de\"]\n",
     "source_ids = tokenizer(\n",
     "    [source + tokenizer.eos_token],\n",
     "    max_length=100,\n",
@@ -115,6 +116,57 @@
     "    return_tensors=\"pt\",\n",
     ").input_ids\n",
     "source, source_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generated = model.generate(\n",
+    "    source_ids,\n",
+    "    tokenizer.eos_token_id,\n",
+    "    n_beams=0,\n",
+    "    use_sampling=True,\n",
+    "    temperature=0.8,\n",
+    "    top_k=75,\n",
+    "    top_p=0.8,\n",
+    ")\n",
+    "generated.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Sie haben eine Debatte über die Tage in diesen Tagen, im nächsten Tage während dieses Berichts bei den Tagungen vorgesehen.',\n",
+       " 'Im Parlament besteht der Wunsch nach einer Aussprache im Verlauf dieser Sitzungsperiode in den nächsten Tagen.')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = tokenizer.decode(generated, skip_special_tokens=True, clean_up_tokenization_spaces=True)\n",
+    "output, target"
    ]
   },
   {
